--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,4 +13,7 @@ variables:
   imageName: 'shashankbarsin/bootcamp-demo:$(build.buildId)'
 
 steps:
-- script:  echo Hello
+- script:  cd app
+- script:  docker build -t developer-camp:test .
+
+
