--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ variables:
   imageName: 'shashankbarsin/bootcamp-demo:$(build.buildId)'
 
 steps:
-- script:  docker build -f ./app/Dockerfile -t developer-camp:test ./app
+- script:  docker build -t developer-camp:test ./app
 
 
 
