--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,22 @@ variables:
   imageName: 'shashankbarsin/bootcamp-demo:$(build.buildId)'
 
 steps:
-- script:  docker build -t developer-camp:test ./app
-
-
-
+- task: Docker@1
+  displayName: Container registry login
+  inputs:
+    command: login
+    azureSubscriptionEndpoint: Demo123
+    azureContainerRegistry: prathamesh.azurecr.io
+- task: Docker@1
+  displayName: Build image
+  inputs:
+    command: build
+    dockerFile: app/Dockerfile
+    imageName: $(imageName) 
+- task: Docker@1
+  displayName: Push image
+  inputs:
+    command: push
+    imageName: $(imageName)
+    azureSubscriptionEndpoint: Demo123
+    azureContainerRegistry: prathamesh.azurecr.io
