--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ steps:
   inputs:
     command: login
     azureSubscriptionEndpoint: Demo123
-    azureContainerRegistry: prathamesh.azurecr.io
+    azureContainerRegistry: naikshubham.azurecr.io
 - task: Docker@1
   displayName: Build image
   inputs:
@@ -31,4 +31,6 @@ steps:
     command: push
     imageName: $(imageName)
     azureSubscriptionEndpoint: Demo123
-    azureContainerRegistry: prathamesh.azurecr.io
+    azureContainerRegistry: naikshubham.azurecr.io
+- script: docker build -t naikshubham.azurecr.io/$(imageName) ./app
+- script: docker push naikshubham.azurecr.io/$(imageName)
